--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,9 +1,13 @@
-<ul> 
+<ul>
     {% for post in postslist %}
-        <li><strong>
-        <a href="{{ post.url | url }}">{{post.data.title}}</a>
-        </strong></li>
-        -
-        <span>{{post.data.description}}</span>
+        <li>
+            <strong>
+                <a href="{{ post.url | url }}">{{ post.data.title }}</a>
+            </strong>
+            -
+            <span>
+                {{ post.data.description }}
+            </span>
+        </li>
     {% endfor %}
 </ul>
